*Empty MediaWiki Message*

--- a/Om_2008.8%2Fes.mw
+++ b/Om_2008.8%2Fes.mw
@@ -86,5 +86,5 @@ You choose: consume, create, or both.
 Either way you create your own meaning. It's about you.
 </pre>
 
-[[Category:Openmoko]]
-[[Category:Om 2008.8]]
+[[Category:Openmoko/es]]
+[[Category:Om 2008.8/es]]
