*Empty MediaWiki Message*

--- a/Om_2008.8%2Ffr.mw
+++ b/Om_2008.8%2Ffr.mw
@@ -116,5 +116,5 @@ Cela devrait résoudre la majeure partie de vos soucis de réseau. Si vous avez 
 * L'installeur n'a pas les droits administrateur, ce qui résulte en une impossibilité d'utiliser opkg. Solution : exécuter "killall packagekitd" (sur le FreeRunner ou lorsque vous y êtes connectés en ssh).
 
 
-[[Category:Openmoko]]
-[[Category:Om 2008.8]]
+[[Category:Openmoko/fr]]
+[[Category:Om 2008.8/fr]]
