*Empty MediaWiki Message*

--- a/Flashing_the_Neo_1973%2Fzh_tw.mw
+++ b/Flashing_the_Neo_1973%2Fzh_tw.mw
@@ -146,4 +146,4 @@ Lost device after RESET?</pre>
 dfu-util 無法在Windows 作業系統所模擬的linux 環境下執行。
 請參考[[Dfu-util|Dfu-util]]頁面取得更多資訊。
 
-[[Category:Flashing Openmoko| ]]
+[[Category:Flashing Openmoko/zh tw| ]]
