*Empty MediaWiki Message*

--- a/Flashing_the_Neo_1973%2Fzh_cn.mw
+++ b/Flashing_the_Neo_1973%2Fzh_cn.mw
@@ -146,4 +146,4 @@ Lost device after RESET?</pre>
 dfu-util 无法在Windows 操作系统所仿真的linux 环境下执行。
 请参考[[Dfu-util|Dfu-util]]页面取得更多信息。
 
-[[Category:Flashing Openmoko| ]]
+[[Category:Flashing Openmoko/zh cn| ]]
