--- a/S3c2410_boot_usb%2Fit.mw
+++ b/S3c2410_boot_usb%2Fit.mw
@@ -19,4 +19,4 @@ s3c2410_boot_usb <path_to_executable> <load_address>
 
 {{Languages|S3c2410_boot_usb}}
 
-[[Category:Flashing Openmoko]]
+[[Category:Flashing Openmoko/it]]
