*Empty MediaWiki Message*

--- a/License%2Far.mw
+++ b/License%2Far.mw
@@ -95,5 +95,5 @@ our code will be
 
 {{Languages|License}}
 
-[[Category:Legal]]
-[[Category:Openmoko Inc]]
+[[Category:Legal/ar]]
+[[Category:Openmoko Inc/ar]]
