--- a/License%2Fit.mw
+++ b/License%2Fit.mw
@@ -93,5 +93,5 @@ Occorre tenere presente che attualmente la FIC ("FIRST INTERNATIONAL COMPUTER, I
 
 {{Languages|License}}
 
-[[Category:Legal]]
-[[Category:Openmoko Inc]]
+[[Category:Legal/it]]
+[[Category:Openmoko Inc/it]]
