--- a/Introduction%2Fzh_cn.mw
+++ b/Introduction%2Fzh_cn.mw
@@ -29,4 +29,4 @@ Also see [[Wishlist:Neo1973 P0 Review]]
 
 {{Languages|Introduction}}
 
-[[Category:Openmoko Inc| ]]
+[[Category:Openmoko Inc/zh cn| ]]
