*Empty MediaWiki Message*

--- a/Introduction%2Fde.mw
+++ b/Introduction%2Fde.mw
@@ -43,4 +43,4 @@ Siehe auch [[Wishlist:Neo1973 P0 Review]]
 
 {{Languages|Introduction}}
 
-[[Category:Openmoko Inc| ]]
+[[Category:Openmoko Inc/de| ]]
