*Empty MediaWiki Message*

--- a/Introduction%2Fpl.mw
+++ b/Introduction%2Fpl.mw
@@ -34,4 +34,4 @@ Zobacz również: [[Lista Życzeń:Neo1973 P0 Review]]
 
 {{Languages|Introduction}}
 
-[[Category:Openmoko Inc| ]]
+[[Category:Openmoko Inc/pl| ]]
