--- a/Introduction%2Fes.mw
+++ b/Introduction%2Fes.mw
@@ -42,4 +42,4 @@ Un vínculo externo [http://blog.printf.net/articles/2007/02/22/unboxing-the-ope
 
 {{Languages|Introduction}}
 
-[[Category:Openmoko Inc| ]]
+[[Category:Openmoko Inc/es| ]]
