--- a/Introduction%2Fit.mw
+++ b/Introduction%2Fit.mw
@@ -39,4 +39,4 @@ Vedi anche [[Wishlist:Neo1973 P0 Review]]
 {{Languages|Introduction}}
 
 
-[[Category:Openmoko Inc| ]]
+[[Category:Openmoko Inc/it| ]]
