*Empty MediaWiki Message*

--- a/OpenLab%2Fzh_tw.mw
+++ b/OpenLab%2Fzh_tw.mw
@@ -59,4 +59,4 @@ Richard Stallman 是 GNU Compiler Collection (GCC) 與 GNU Debugger (GDB) 的原
 
 {{Languages|OpenLab}}
 
-[[Category:OpenLab| ]]
+[[Category:OpenLab/zh tw| ]]
