*Empty MediaWiki Message*

--- a/Openmoko_Education_Interview%2Fzh_tw.mw
+++ b/Openmoko_Education_Interview%2Fzh_tw.mw
@@ -26,4 +26,4 @@ Openmoko 即將啟動台灣區校園推廣計畫。我們將會在2月份到6月
 
 {{Languages|Openmoko Education Interview}}
 
-[[Category:OpenLab]]
+[[Category:OpenLab/zh tw]]
