*Empty MediaWiki Message*

--- a/Openmoko_OpenLab_Opening%2Fzh_tw.mw
+++ b/Openmoko_OpenLab_Opening%2Fzh_tw.mw
@@ -64,5 +64,5 @@ OpenLab 要公開了。為了讓台灣的朋友們，都能近距離與這個全
 
 {{Languages|Openmoko_OpenLab_Opening}}
 
-[[Category:Event]]
-[[Category:OpenLab]]
+[[Category:Event/zh tw]]
+[[Category:OpenLab/zh tw]]
