*Empty MediaWiki Message*

--- a/Richard_Stallman%2Fzh_tw.mw
+++ b/Richard_Stallman%2Fzh_tw.mw
@@ -134,5 +134,5 @@ chelsea@openmoko.com
 
 {{Languages|Richard_Stallman}}
 
-[[Category:Event]]
-[[Category:OpenLab]]
+[[Category:Event/zh tw]]
+[[Category:OpenLab/zh tw]]
