*Empty MediaWiki Message*

--- a/Advanced_End-user%2Fit.mw
+++ b/Advanced_End-user%2Fit.mw
@@ -10,5 +10,5 @@ Consultare:
 * [[Application Developer/it|Sviluppo delle applicazioni]]
 {{Languages|Advanced_End-user}}
 
-[[Category:Documentation]]
-[[Category:Profile]]
+[[Category:Documentation/it]]
+[[Category:Profile/it]]
