--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -77,7 +77,10 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Ralink RT2800 series (WIFI) || NA || NA || NA || Only have PCIe & USB interface. See [http://www.ralink.com.tw/Home/Products/Applications/MobileWorld.html Ralink's website]
 |-
-| Airoha AL223X series (WIFI) || NA || NA || NA || See [http://www.airoha.com.tw/AL2236.htm Airoha's website]
+| Airoha AL223X + MTK Baseband (WIFI) || Need to contact MTK || NA || NA || See [http://www.airoha.com.tw/AL2236.htm Airoha's website]
+|-
+|-
+| Airoha AL223X + KeyStream Baseband series (WIFI) || Need to contact KeyStream || NA || NA || See [http://www.airoha.com.tw/AL2236.htm Airoha's website]
 |-
 | ST STLC4560 (WIFI) || NA || NA || NA || see [http://www.st.com/stonline/products/literature/bd/14302/stlc4560.htm ST's website]
 |-
