Added system requirements info

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -118,8 +118,16 @@ The blue-green dotted line is
 the Galactic Plane, the intersection of the plane of the Milky Way's
 disk and the celestial sphere.
 
-== Installing this Program ==
+== System Requirements ==
+This program requires 630 kbytes of storage space in the phone's
+builtin flash storage or microSD card.   By default, most of
+the files (everything except the .desktop file, the launch
+icon and the executable) are stored under /usr/share/orrery.
+This directory tree may be moved elsewhere, if the new
+location is specified with the -d switch on the orrery
+invocation line in the .desktop file.
 
+== Installing this Program ==
 .ipk files for this program are now available for both the 2007.2
 and 2008.8 stacks, at the gForge site.   It is much easier to install
 than it used to be. The program has been added to the community
