--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -576,7 +576,8 @@ and then you should be able to connect to the internet from your computer!
 * [[Manually using Bluetooth]]
 
 {{Languages|Manually_using_GPRS}}
+
 [[Category:Documentation]]
 [[Category:Application Developer]]
-
 [[Category:Guides]]
+[[Category:Networking]]
