--- a/GPRS_FSO.mw
+++ b/GPRS_FSO.mw
@@ -41,22 +41,22 @@ If your APN has no username or password, you must still provide a string to sati
 
 To connect, put the following in a file and make it executable (<code>chmod +x gprs-on.sh</code>):
 
-  #!/bin/sh
-  APN="internet.parlino.se"
-  USERNAME="x"
-  PASSWORD="x"
-  BUSNAME="org.freesmartphone.frameworkd"
-  OBJECTPATH="/org/freesmartphone/GSM/Device"
-  METHODNAME="org.freesmartphone.GSM.PDP.ActivateContext"
-  mdbus -s $BUSNAME $OBJECTPATH $METHODNAME $APN $USERNAME $PASSWORD
+ #!/bin/sh
+ APN="internet.parlino.se"
+ USERNAME="x"
+ PASSWORD="x"
+ BUSNAME="org.freesmartphone.frameworkd"
+ OBJECTPATH="/org/freesmartphone/GSM/Device"
+ METHODNAME="org.freesmartphone.GSM.PDP.ActivateContext"
+ mdbus -s $BUSNAME $OBJECTPATH $METHODNAME $APN $USERNAME $PASSWORD
 
 To disconnect, use the following method instead (<code>chmod +x gprs-off.sh</code>):
 
-  #!/bin/sh
-  BUSNAME="org.freesmartphone.frameworkd"
-  OBJECTPATH="/org/freesmartphone/GSM/Device"
-  METHODNAME="org.freesmartphone.GSM.PDP.DeactivateContext"
-  mdbus -s $BUSNAME $OBJECTPATH $METHODNAME
+ #!/bin/sh
+ BUSNAME="org.freesmartphone.frameworkd"
+ OBJECTPATH="/org/freesmartphone/GSM/Device"
+ METHODNAME="org.freesmartphone.GSM.PDP.DeactivateContext"
+ mdbus -s $BUSNAME $OBJECTPATH $METHODNAME
 
 The ''on'' script, using the ActivateContext method, will:
 * setup a ppp interface (normally ppp0) (and assign IP address)
@@ -68,3 +68,4 @@ For a list of known APN:s, see the [[GPRS#Some_APN_names_for_reference|main GPRS
 
 [[Category:FSO]]
 [[Category:Networking]]
+[[Category:Guides]]
