Added Framework and D-Bus categories

--- a/GPRS_FSO.mw
+++ b/GPRS_FSO.mw
@@ -69,3 +69,5 @@ For a list of known APN:s, see the [[GPRS#Some_APN_names_for_reference|main GPRS
 [[Category:FSO]]
 [[Category:Networking]]
 [[Category:Guides]]
+[[Category:Framework]]
+[[Category:D-Bus]]
