/* See also */  adding GPRS FSO

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -574,7 +574,7 @@ and then you should be able to connect to the internet from your computer!
 * [[pppd]]
 * [[Manually using GSM]]
 * [[Manually using Bluetooth]]
-
+* [[GPRS FSO]]
 {{Languages|Manually_using_GPRS}}
 
 [[Category:Documentation]]
