--- a/GPRS_FSO.mw
+++ b/GPRS_FSO.mw
@@ -19,12 +19,12 @@ The methods available:
   [METHOD]    org.freesmartphone.GSM.PDP.SetCurrentGprsClass( s:class_ )
   [SIGNAL]    org.freesmartphone.GSM.PDP.ContextStatus( i:index, s:status, a{sv}:properties )
 
-Signals will look like this:
+Use ''mdbus -s -l'' to monitor the emitted signals.  Signals will look like this:
 
 :ActivateContext( s:apn, s:user, s:password )
   [SIGNAL]    org.freesmartphone.GSM.PDP.ContextStatus    from :1.3 /org/freesmartphone/GSM/Device
   (dbus.Int32(1), dbus.String(u'outgoing'), dbus.Dictionary({}, signature=dbus.Signature('sv')))</code>
-:''once the connection is established (takes 3-4 seconds for me)'' a new signal is emited
+:Once the connection is established (takes 3-4 seconds for me) a new signal is emited
   [SIGNAL]    org.freesmartphone.GSM.PDP.ContextStatus    from :1.3 /org/freesmartphone/GSM/Device
   (dbus.Int32(1), dbus.String(u'active'), dbus.Dictionary({}, signature=dbus.Signature('sv')))
 :DeactivateContext
@@ -65,6 +65,10 @@ The ''on'' script, using the ActivateContext method, will:
 with settings received from the ISP.
 
 For a list of known APN:s, see the [[GPRS#Some_APN_names_for_reference|main GPRS page]].
+
+== See also ==
+* [[GPRS]]
+* [[OpenmokoFramework/mdbus]]
 
 [[Category:FSO]]
 [[Category:Networking]]
