--- a/Manually_using_Bluetooth.mw
+++ b/Manually_using_Bluetooth.mw
@@ -15,7 +15,10 @@ The old way to do it is a shell command (for kernels before 2.6.24):
 
 For kernel 2.6.24 (or later) use
 
- root@om-gta02:~# echo 1 > /sys/bus/platform/devices/neo1973-pm-bt.0/power_on 
+ root@om-gta02:~# echo 1 > /sys/bus/platform/devices/neo1973-pm-bt.0/power_on
+
+and on the GTA02 *only* (i.e. not on the GTA01) also use
+ 
  root@om-gta02:~# echo 0 > /sys/bus/platform/devices/neo1973-pm-bt.0/reset
 
 
