--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -85,7 +85,8 @@ This is only a subset. See [http://docs.openmoko.org/trac/search?q=2008.8 all ti
 * [http://docs.openmoko.org/trac/ticket/1682 Neo turns off before reaching x]
 
 '''Networking'''
-* No Updates/Installation are possible or pings to domains because dns is not working. This problem occurs because the /etc/resolv.conf is empty by default.Add this line in /etc/network/interfaces:
+* No Updates/Installation are possible or pings to domains because dns is not working. This problem occurs because the /etc/resolv.conf is empty by default.
+Add this line in /etc/network/interfaces:
 
 
  up echo nameserver 192.168.0.200 >/etc/resolv.conf
