--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -88,9 +88,12 @@ This is only a subset. See [http://docs.openmoko.org/trac/search?q=2008.8 all ti
 * No Updates/Installation are possible or pings to domains because dns is not working. This problem occurs because the /etc/resolv.conf is empty by default.
 Add this line in /etc/network/interfaces:
 
- up echo nameserver 192.168.0.200 >/etc/resolv.conf
-This is to be inserted below gateway address and above the bluetooth networking. After this rebooting is required. Then go to /etc/resolv.conf and fill it manually by just using the content of this file on your local machine, or DNS address.
+ up echo nameserver 208.67.222.222 >/etc/resolv.conf
+This is to be inserted below gateway address and above the bluetooth networking. After this a reboot is required.
 
+For resolving DNS without restarting edit /etc/resolv.conf and fill it manually by adding the following line:
+
+ nameserver 208.67.222.222
 This should solve most off your moko side networking issues. If you need any other help please refer to [[USB Networking]]
 
 {{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used }}
