--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -46,7 +46,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 {|border=1 cellspacing=0
 ! Chip/Module !!Freedom Requirements !! Bussiness Requirements !! Technical Requirements !! Specs
 |-
-||SIMCOM5210  || All docs can be opened under the letter of authorization Aug 13 (The letter is delivered on Aug 21) || Teenie says it's OK. || Good (Shawn Aug.7.2008)||[http://www.sim.com/productssolutions/wirelessmodule/sim5210.htm]
+||SIMCOM5210  || All docs can be opened under the letter of authorization Aug 13 ('''The letter is delivered on Aug 21''') || Teenie says it's OK. || Good (Shawn Aug.7.2008)||[http://www.sim.com/productssolutions/wirelessmodule/sim5210.htm]
 |-
 | WiFi and BT Combo Module (AR6002+BC6) ||Not Checked || Not Checked || Good (Shawn Aug.7.2008)||[http://www.atheros.com/pt/bulletins/AR6002Bulletin.pdf]WIFI[http://www.csrsupport.com/download/10151/BC6AudioROMIssue4.pdf]Bluetooth
 |-
