*Empty MediaWiki Message*

--- a/GSM.mw
+++ b/GSM.mw
@@ -62,6 +62,10 @@ sudo mknod /dev/ttySAC0 c 204 64 -m 660
 sudo chgrp dialout /dev/ttySAC0
 
 
+== GTA01 & GTA02 GSM issues ==
+
+There are some [[GSM network registration]] issues, that makes some SIM cards not work on those 2 phones.
+
 
 
 
