/* Configure Default Neo DNS */

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -67,10 +67,10 @@ DNS is configured in /etc/resolv.conf on your FreeRunner.  It should contain:
 
 If Desktop/Laptop has a DNS server or is proxying DNS:
  nameserver 192.168.0.200 
-or just put in another DNS Server - for example: 
- nameserver 212.147.10.10
-
 Some Linux and Windows systems have DNS servers, especially those configured as servers, but in general they do not.  You can install packages such as ''bind9'' or ''dnsmasq'' to run your own DNS server.  If you have a DNS server then Test Your Connection.  Otherwise you may want to proxy DNS from your Desktop/Laptop.
+
+You can also add the public DNS server called openDNS:
+ nameserver 208.67.222.222
 
 == Proxying DNS from Desktop/Laptop ==
 
