*Empty MediaWiki Message*

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2130,6 +2130,26 @@ Due to common customs problems we created google group to discuss how to get tha
 | 13(15?)
 |}
 
+=== Kazan ===
+
+{| border="1"
+| login
+| google groups name
+| colspan="3"| number of items
+|-
+| Ilnursoft
+| ilnursoft
+| 0 (думаю)
+|
+| 
+|-
+| 1. [[x-Range]]
+| x-Range
+| 1 (P3.5)
+| 1 (P3.5)
+| 1 (P3.5)
+|-
+
 === Kemorovo ===
 
 {| border="1"
