*Empty MediaWiki Message*

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2140,15 +2140,17 @@ Due to common customs problems we created google group to discuss how to get tha
 | Ilnursoft
 | ilnursoft
 | 0 (думаю)
-| 
-| 
+| 0
+| 0
 |-
-| 1. [[x-Range]]
-| x-Range
-| 0
-| 0
-| 0
-|-}
+
+|Total number:
+|
+| 
+| 
+| 
+|}
+
 
 === Kemorovo ===
 
