*Empty MediaWiki Message*

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2137,7 +2137,13 @@ Due to common customs problems we created google group to discuss how to get tha
 | google groups name
 | colspan="3"| number of items
 |-
-| Ilnursoft
+|
+|
+| Neo FreeRunner
+| Dboard
+| Spares Pack
+|-
+| 1. Ilnursoft
 | ilnursoft
 | 0 (думаю)
 | 0
@@ -2146,9 +2152,9 @@ Due to common customs problems we created google group to discuss how to get tha
 
 |Total number:
 |
-| 
-| 
-| 
+| 0
+| 0
+| 0
 |}
 
 
