*Empty MediaWiki Message*

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2143,7 +2143,7 @@ Due to common customs problems we created google group to discuss how to get tha
 | Dboard
 | Spares Pack
 |-
-| 1. Ilnursoft
+| 1. [[Ilnursoft]]
 | ilnursoft
 | 0 (думаю)
 | 0
