--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2143,7 +2143,7 @@ Due to common customs problems we created google group to discuss how to get tha
 | Dboard
 | Spares Pack
 |-
-| 1. [[Special:Emailuser/ilnursoft|Ilnursoft]] 
+| 1. [[Special:Emailuser/ilnursoft@gmail.com|Ilnursoft]] 
 | ilnursoft
 | 0 (думаю)
 | 0
