--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -227,6 +227,9 @@ Please note also the Hearing Aid Compatibility regulations in the US. I have tri
 
 Button to temporarily disable microphone while talking for applications such as telephone, audio recording and (when available) movie recording.
 
+==== Horizontal detection ====
+
+An option to disable the vibrating when being called if the phone is horizontal. This option would prevent phones falling of tables and such when being called.
 
 ===Web Browser===
 
