--- a/Neo_FreeRunner%2Fnl.mw
+++ b/Neo_FreeRunner%2Fnl.mw
@@ -10,7 +10,7 @@ __NOEDITSECTION__
 {{Submenu}}
 [[Image:GTA02.gif |100px|left|frontside]]
 
-[[Openmoko]]™ begonnen als een [http://en.wikipedia.org/wiki/Open_source Open Source] project onder de  [[License| GPL and LGPL licentie]] and dedicated to delivering an open software stack on mobile platforms, shipped its first product, the Neo 1973, on July 9 2007; and then, turned the project into a start-up company with one aim: create great mobile products using the Openmoko stack: Open. Mobile. Free.
+[[Openmoko]]™ is begonnen als een [http://en.wikipedia.org/wiki/Open_source Open Source] project onder de  [[License| GPL and LGPL licentie]] en is toegewijd aan het brengen van een open software product op mobiel platformen. Openmoko bracht zijn eerste product, de Neo 1973, uit op 9 juli 2007; en veranderde het project toen in een beginnend bedrijf met 1 doel: het maken van geweldige mobiele producten gebruik makend van de Openmoko software: Open. Mobiel. Gratis. (Open. Mobile. Free)
 
 The [[NeoSoftwareStack|Openmoko stack]], which includes a full [[Host-based development with Xoo and Xephyr|X server]], allows users and developers to transform mobile hardware platforms into a unique products. Our licence gives developers and users freedom from the "iron to the eyeballs," freedom to cosmetically customize their device or radically remix it;  change the wallpaper or rebuild the entire house! It grants them the freedom, for example, to transform a phone into a medical device or point of sale device or the freedom to simply install their own favorite software. Beyond freeing the software on our devices we have also released our CAD files under Creative Commons. By freeing the software under GPL, we enable the community of FOSS developers to "make it new." By freeing the [http://downloads.openmoko.org/CAD/ CAD] files we give industrial designers and engineers this same opportunity.
  
