/* Configure Default Neo DNS */

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -63,14 +63,12 @@ In addition to routing issues, to be practical, DNS will need to work.  In some 
 
 == Configure Default Neo DNS ==
 
-DNS is configured in /etc/resolv.conf on your FreeRunner.  It should contain:
-
-If Desktop/Laptop has a DNS server or is proxying DNS:
- nameserver 192.168.0.200 
-Some Linux and Windows systems have DNS servers, especially those configured as servers, but in general they do not.  You can install packages such as ''bind9'' or ''dnsmasq'' to run your own DNS server.  If you have a DNS server then Test Your Connection.  Otherwise you may want to proxy DNS from your Desktop/Laptop.
+DNS is configured in /etc/resolv.conf on your FreeRunner.  You can add your local computer as a DNS:
+ echo nameserver 192.168.0.200 > /etc/resolv.conf
+Some Linux and Windows systems have DNS servers, especially those configured as servers, but in general they do not.  You can install packages such as ''bind9'' or ''dnsmasq'' to run your own DNS server. 
 
 You can also add the public DNS server called openDNS:
- nameserver 208.67.222.222
+ echo nameserver 208.67.222.222 > /etc/resolv.conf
 
 == Proxying DNS from Desktop/Laptop ==
 
