*Empty MediaWiki Message*

--- a/GSM_network_registration.mw
+++ b/GSM_network_registration.mw
@@ -93,5 +93,10 @@ We'd like to know the real network registration status by our NEO devices in the
 | KB || Denmark || TDC || From TDC business in 2007 (64K43) didn't work, got new card for free (64K23) and that worked! || GTA02Bv5 || Moko8 || ¿What? || Works with new card || File not found
 |}
 
+
+== See also ==
+* [[FreeRunner unable to work with 3G SIM cards]]
+
+
 [[Category:Hardware]]
 [[Category:GSM]]
