/* Compatibility table (FreeRunner/GTA02) */

--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -18,7 +18,7 @@ Please fill out following table .
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="3" border="1"
 !Carrier Name!! Error Message !! SIM Card Type!! Country !!Link to picture of SIM card!!Your name!!Did new SIM card solve problem?||Notes
 |-
-| TDC || Not working || 64K43 || Denmark || no pics || KB || Yes. They sent me a 64K23 card for free and that worked. || The chip on the new card is bigger. It has 4x4 contact points instead of 3x3.
+| TDC || Not working || 64K43 || Denmark || no pics || KB || Yes. They sent me a 64K23 card for free and that worked. || The chip on the new card is bigger. It has 4 contact points on each of the 2 columns, instead of 3 on each.
 |-
 | CHT || Unable to use GSM  ||Dont' know||  R.O.C Taiwan || no pics ||王孟蒂 Brenda Wang|| ||When I put it on my Neo, it can't dial out
 |-
