*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Paris.mw
+++ b/Openmoko_Local_Groups:_Paris.mw
@@ -51,6 +51,12 @@ IDF - Paris
 |Applications, Middleware, OS, Telephony
 |La Garenne-Colombes (92250)
 |-
+|-
+|[[User:scalde|Harald Zophoniasson]]
+|C
+|
+|Rambouillet
+|-
 |}
 
 [[Category:Openmoko Local Groups]]
