/* Pages proposed for deletion */ voting

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -88,7 +88,7 @@ These end up in mixed content. They could be removed and content migrated to mor
 |-
 | [[Roadmap]] || Emtpy bascially || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-| [[Dfu-util/bg]] || Empty || [[User:Dolfje]]
+| [[Dfu-util/bg]] || Empty || [[User:Dolfje]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |}
 
