/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -90,6 +90,7 @@ These end up in mixed content. They could be removed and content migrated to mor
 |-
 | [[Dfu-util/bg]] || Empty || [[User:Dolfje]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
+| [[OUI (Organizationally Unique Identifiers)]] || duplicate of [[OUI]] || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 ==Wiki engine issues==
