/* Configure Default Neo DNS */

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -70,6 +70,9 @@ Some Linux and Windows systems have DNS servers, especially those configured as 
 You can also add the public DNS server called openDNS:
  echo nameserver 208.67.222.222 > /etc/resolv.conf
 
+These settings will be lost on reboot. You can set the DNS for the next connect, by adding the following to the end of the usb0 setting in /etc/network/interfaces, right above the bluetooth networking section:
+ up echo nameserver 208.67.222.222 >/etc/resolv.conf
+
 == Proxying DNS from Desktop/Laptop ==
 
 If you move about, making assumptions about the network may not be convenient, and it is possible to proxy DNS requests via your host laptop (which you are also taking with you), without running or installing a DNS server.  There are a number of ways to do this:
