--- a/Glossary.mw
+++ b/Glossary.mw
@@ -1,40 +1,40 @@
 This Page is for collection special vocabulary/abbreviations used inside our project Openmoko.
 
-
 ==AGPS==
+
 Assisted GPS - see http://en.wikipedia.org/wiki/AGPS
-
 ==BGA==
-A ball grid array (BGA) is a type of surface-mount packaging used for integrated circuits  http://en.wikipedia.org/wiki/BGA
 
+A ball grid array (BGA) is a type of surface-mount packaging used for integrated circuits http://en.wikipedia.org/wiki/BGA
 ==BSC==
-Base Station Controller - This is a part of the GSM network. It is connected via Abis interface to the BTS. Upstream connection is to the MSC. 
 
+Base Station Controller - This is a part of the GSM network. It is connected via Abis interface to the BTS. Upstream connection is to the MSC.
 ==BTS==
-Base Transceiver Station - This is the part between the MS and BSC in a GSM network. It is interfaced to the BSC using the Abis protocol. 
 
+Base Transceiver Station - This is the part between the MS and BSC in a GSM network. It is interfaced to the BSC using the Abis protocol.
 ==FBGA==
-FINE ball grid array - see ([[Glossary#BGA|BGA]])
 
+FINE ball grid array - see (BGA)
 ==FPGA==
-Field Programmable Gate Array (not used in v1)  http://en.wikipedia.org/wiki/FPGA
 
+Field Programmable Gate Array (not used in v1) http://en.wikipedia.org/wiki/FPGA
 ==GPRS==
+
 General Packet Radio Service - see http://en.wikipedia.org/wiki/General_Packet_Radio_Service
-
 ==GPS==
+
 Global Positioning System - see http://en.wikipedia.org/wiki/Gps
-
 ==GTA01==
-Internal codename of the first phone hardware release, the [[Neo 1973]]
 
+Internal codename of the first phone hardware release, the Neo 1973
 ==GTA02==
-Internal codename of the second phone hardware release, the [[Neo FreeRunner]]
 
+Internal codename of the second phone hardware release, the Neo FreeRunner
 ==MSC==
-Mobile Switching Centre. A major componenent of the GSM Network.
 
+Mobile Switching Centre. A major componenent of the GSM Network.
 ==PLMN==
+
 Acronym for [http://en.wikipedia.org/wiki/Public_land_mobile_network Public Land Mobile Network] what your mobile phone almost certainly connects to.
 
 [[Category:Information]]
