/* Running tangoGPS on Om 2008.8 */

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -11,8 +11,7 @@ Website: http://www.tangogps.org
 
 From the freerunner connected to the internet:
 
-  opkg install gpsd
-  opkg install tangogps
+  opkg install gpsd tangogps
 
 If opkg complains about not being able to acquire a lock, try:
 
