Removed unneeded quotation marks

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -48,7 +48,7 @@ in the above image).
 
 == Control Modes ==
 The orrery has two control modes, "finger mode" and "stylus mode".
-By default the program is in finger mode. In "finger mode", the image 
+By default the program is in finger mode. In finger mode, the image 
 can be panned by tapping your finger in
 the bottom 1/5 of the display (excluding menus).   The size of
 the panning step is controlled by how close your finger is
@@ -66,8 +66,7 @@ In stylus mode, to exit from fullscreen you must tap in the area
 above the upper blue line, in the region where the time and location
 are displayed.   Tapping anywhere else toggles between the two screens.
 
-There is a check box in the display menu which allows you to turn finger
-mode on and off.
+There is a check box in the display menu which allows you to turn finger mode on and off.
 
 One may enter fullscreen mode by tapping the fullscreen button at the
 bottom left of the display.
