Added path to .desktop file

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -124,7 +124,8 @@ the files (everything except the .desktop file, the launch
 icon and the executable) are stored under /usr/share/orrery.
 This directory tree may be moved elsewhere, if the new
 location is specified with the -d switch on the orrery
-invocation line in the .desktop file.
+invocation line in the .desktop file.   The .desktop
+file resides in /usr/share/applications .
 
 == Installing this Program ==
 .ipk files for this program are now available for both the 2007.2
