--- a/Geocaching.mw
+++ b/Geocaching.mw
@@ -13,7 +13,17 @@ An application for geocaching guides you to a cache with direction and distance,
 (TBD)
 
 == Architectural Details ==
-(TBD)
+=== Spider ===
+Since www.geocaching.com doesn't have a documented API, a spider has to retrieve indormation from the website. Maybe the spider of [http://www.cachewolf.de CacheWolf] might be a good starting point. However, it is written in Java.
+
+=== DBUS ===
+I don't know much about [[D-Bus]]. It would be nice to have a D-Bus interface so send the details (e.g. coordinates) to other applications. This way,
+* [[TangoGPS]] could display the cache on a map,
+* [[Navit]] could route to a cache,
+* a compass application could point to the cache,
+* a location based ToDo list could make an alert.
+
+So the Geocaching application don't have to provide all these functionalities.
 
 == Questions and Answers ==
 (TBD)
