--- a/Geocaching.mw
+++ b/Geocaching.mw
@@ -4,9 +4,11 @@ Geocaching is an outdoor treasure-hunting game in which the participants use a G
 An application for geocaching guides you to a cache with direction and distance, of course. But it should also be possible to download additional information like description, logs and hints for a cache.
 
 == Use Cases ==
-* Distance and direction to a cache
-* Additional information of the cache
+* Download caches nearby current position
+* Download additional information of a cache
 * Alert me, if I'm (unintentional) nearby a cache
+* Log caches offline
+* Distance and direction to a cache
 * Support for [http://wherigo.com Wherigo] cartridges (However, it seems that the file format isn't open.)
 
 == Layout Components ==
