Added bluetooth section

--- a/Debian.mw
+++ b/Debian.mw
@@ -70,6 +70,18 @@ Issues:
 * does not reestablish connection when leaving wireless area and then returning
 * does not support multiple wireless networks or open hotspots that you may travel between
 
+== Bluetooth ==
+
+The Freerunner uses the standard Linux bluez stack, installed with
+ # apt-get install bluez-utils
+
+The only atypical part of using bluetooth on the Freerunner is turning it on, which can be done with
+ # echo 1 > /sys/bus/platform/devices/neo1973-pm-bt.0/power_on
+ # echo 0 > /sys/bus/platform/devices/neo1973-pm-bt.0/reset
+
+Then the device should be visible using
+ # hcitool dev
+
 = Software =
 == TangoGPS ==
 {{main|TangoGPS}}
