--- a/Geocaching.mw
+++ b/Geocaching.mw
@@ -1,5 +1,5 @@
 == Overview ==
-Geocaching is an outdoor treasure-hunting game in which the participants use a Global Positioning System (GPS) receiver or other navigational techniques to hide and seek containers (called "geocaches" or "caches") anywhere in the world. A typical cache is a small waterproof container containing a logbook and "treasure," usually toys or trinkets of little value. (from http://www.wikipedia.org)
+''Geocaching is an outdoor treasure-hunting game in which the participants use a Global Positioning System (GPS) receiver or other navigational techniques to hide and seek containers (called "geocaches" or "caches") anywhere in the world. A typical cache is a small waterproof container containing a logbook and "treasure," usually toys or trinkets of little value.''[http://www.wikipedia.org]
 
 An application for geocaching guides you to a cache with direction and distance, of course. But it should also be possible to download additional information like description, logs and hints for a cache.
 
