--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -792,6 +792,12 @@ The phone should switch automatically between vertical, horizontal single axis (
 
 Along the same lines, it could be used as a leveling protractor, to determine slope.
 
+==== Ringtones determined by position ====
+When you are being called, the phone checks in what position it is and gives a ringtone accordingly.
+If it is laying face up, you could have the vibration off and a normal ringtone.
+If it is laying face down, you could have the vibration off and no ringtone (maybe only a led blinking). (in a meeting)
+If it is constantly moving, you could have a extra loud ringtone as this is a sign of movement. (walking, biking, skating or other activity)
+
 ==== Others ====
 Also see the pages[[Wishlist:Auto Align Map]], [[Wishlist:Determine Position]], [[Distance Measuring]], [[Wishlist:Computer Mouse]], [[Wishlist:Dynamic Screen Orientation]].
 
