--- a/Geocaching.mw
+++ b/Geocaching.mw
@@ -18,6 +18,9 @@ An application for geocaching guides you to a cache with direction and distance,
 === Spider ===
 Since www.geocaching.com doesn't have a documented API, a spider has to retrieve indormation from the website. Maybe the spider of [http://www.cachewolf.de CacheWolf] might be a good starting point. However, it is written in Java.
 
+I just noticed that it isn't allowed to automatic download content from www.geocaching.com:
+[http://www.geocaching.com/about/termsofuse.aspx Terms of use agreement] (Section 5)
+
 === DBUS ===
 I don't know much about [[D-Bus]]. It would be nice to have a D-Bus interface so send the details (e.g. coordinates) to other applications. This way,
 * [[TangoGPS]] could display the cache on a map,
