*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Hamburg.mw
+++ b/Openmoko_Local_Groups:_Hamburg.mw
@@ -34,7 +34,7 @@
 |-
 |[[User:hanez|hanez]]
 |Linux, Gentoo, C, GTK
-|Make OpenWrt run on the Openmoko device... ;)
+|Make [http://openwrt.org OpenWrt] run on the Openmoko device... ;)
 |Hamburg
 |
 |Ja
