--- a/GPS_applications.mw
+++ b/GPS_applications.mw
@@ -32,4 +32,4 @@ As people develop more sophisticated GPS applications, please note them here.
 * [[qpegps]] qtopia (arm PDA) based map viewer with gps features
 * [[QMapControl]] Qtopia based mapping widget. Displays maps and custom data, also other widgets can be bound to coordinates. GPS parser for the gllin output included.
 [http://projects.openmoko.org/projects/openvario/ here].
-* [http://www.tangogps.org TangoGPS] mapping program. Downloads maps on demand and caches them, very efficient. '''Works very well.'''
+* [[TangoGPS]] mapping program. Downloads maps on demand and caches them, very efficient. '''Works very well.'''
