*Empty MediaWiki Message*

--- a/GPS_applications.mw
+++ b/GPS_applications.mw
@@ -1,4 +1,5 @@
 == Possible GPS applications ==
+More information about other types of applications can be found [[applications|here]]
 
 As people develop more sophisticated GPS applications, please note them here.
 
