*Empty MediaWiki Message*

--- a/Neo_1973_GPS.mw
+++ b/Neo_1973_GPS.mw
@@ -60,7 +60,8 @@ Here is how to make your smartphone appear to be a Bluetooth GPS.
 #Run '''sdptool add SP'''
 #Run '''rfcomm watch 0 1 sh -c "cat /tmp/nmeaNP >/dev/rfcomm0" &'''
 
-{{GPS applications}}
+== GPS applications ==
+{{main|GPS applications}}
 
 [[Category:GPS]]
 [[category:Documentation]]
