*Empty MediaWiki Message*

--- a/Neo_FreeRunner_GPS.mw
+++ b/Neo_FreeRunner_GPS.mw
@@ -304,7 +304,8 @@ for d in sys.argv[1:]:
 sys.stdout.write(chr(cs0)+chr(cs1))
 </pre>
 
-{{GPS applications}}
+== GPS applications ==
+{{main|GPS applications}}
 
 [[category:GPS]]
 [[category:GTA02 Hardware]]
