--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -71,7 +71,10 @@ On the GTA01, the Hammerhead are configured that connected with the host process
 
 == GPS on GTA02 ==
 
-To get gpsd working on the Neo Freerunner you have to edit /etc/default/gpsd, change GPS_DEV="/dev/ttyS3" to GPS_DEV="/dev/ttySAC1". that's it
+To get gpsd working on the Neo Freerunner you have to run the following commands:
+
+ echo "GPS_DEV=\"/dev/ttySAC1\"" > /etc/default/gpsd
+ /etc/init.d/gpsd restart
 
 == Q & A ==
 
