--- a/Applications.mw
+++ b/Applications.mw
@@ -7,6 +7,19 @@ Community applications may be found on the [[Wish_List|Wish List]] and on [http:
 
 Although [[Openmoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
+== Applications ==
+=== 2007.2 Applications ===
+These applications use the second generation interface:<br>
+see [[Om 2007.2 Applications]]
+
+=== 2007.1 Applications ===
+These applications use the first generation interface: <br>
+see [[Om 2007.1 apps]]
+
+=== Community Applications ===
+For a list of all applications developed from the community: <br>
+see [[Openmoko Community Applications]]
+
 == General Principles ==
 
 * All modifications are saved instantaneously, there should never be a save command.
@@ -28,15 +41,6 @@ Although [[Openmoko]] is designed for smartphones that use a stylus, it would be
 * Consider adding a Trash or Deleted Items area that has everything the user has deleted. The user’s data is the most important priority. Let’s make it hard for them to lose anything and easy to recover it.
 
 * Reduce at the minimum the need for unused space: borders, intra-widgets distance.
-
-=== 2007.2 Applications ===
-These applications use the second generation interface:<br>
-see [[Om 2007.2 Applications]]
-
-=== 2007 Applications ===
-These applications use the first generation interface: <br>
-see [[Om 2007.1 apps]]
-
 
 [[Category:Applications| ]]
 [[Category:Openmoko]]
