*Empty MediaWiki Message*

--- a/Applications.mw
+++ b/Applications.mw
@@ -8,13 +8,20 @@ Community applications may be found on the [[Wish_List|Wish List]] and on [http:
 Although [[Openmoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
 == Applications ==
-=== 2007.2 Applications ===
+=== Based on Software Stack ===
+==== 2007.2 Applications ====
 These applications use the second generation interface:<br>
 see [[Om 2007.2 Applications]]
 
-=== 2007.1 Applications ===
+==== 2007.1 Applications ====
 These applications use the first generation interface: <br>
 see [[Om 2007.1 apps]]
+
+=== Based on function ===
+
+==== GPS Applications ====
+For a list of applications that use the GPS: <br>
+see [[GPS Applications]]
 
 === Community Applications ===
 For a list of all applications developed from the community: <br>
