*Empty MediaWiki Message*

--- a/Om_2007.2_Applications.mw
+++ b/Om_2007.2_Applications.mw
@@ -1,4 +1,5 @@
 {{OM2007.2}}
+{{Applications}}
 == Overview ==
 This page describes the set of core applications '''currently''' included in Openmoko.  Additional/Community Apps listed here is limited to popular apps under consideration for inclusion into the core.
 
