*Empty MediaWiki Message*

--- a/GPS_applications.mw
+++ b/GPS_applications.mw
@@ -1,5 +1,5 @@
+{{Applications}}
 == Possible GPS applications ==
-More information about other types of applications can be found [[applications|here]]
 
 As people develop more sophisticated GPS applications, please note them here.
 
