*Empty MediaWiki Message*

--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -1,3 +1,5 @@
+{{Applications}}
+
 == Overview ==
 This page is intended for ordinary end users of Openmoko smartphones.   It lists some of the cool applications provided by the Openmoko community that you can install and enjoy.   Freedom to share!    You can find many more applications here - http://projects.openmoko.org 
 
