*Empty MediaWiki Message*

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -1,5 +1,6 @@
 {{Languages|TangoGPS}}
-{{Distributions|TangoGPS}}
+{{Application|TangoGPS}}
+
 TangoGPS is a map application which can utilize Neo's built-in GPS to show your current location.
 
 [[Image:TangoGPS1.jpg]]
