--- a/Minimo.mw
+++ b/Minimo.mw
@@ -1,5 +1,5 @@
 {{Languages|Minimo}}
-
+{{Application|Minimo}}
 
 [[Image:Minimo-slashdot.jpeg|thumb|minimo in QEMU displaying it.slashdot.org]]
 [[Image:GTA01-minimo.JPG|thumb|minimo on GTA01 displaying www.heise.de]]
