*Empty MediaWiki Message*

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -1,3 +1,5 @@
+{{Application|Orrery}}
+
 == Overview ==
 The orrery is a simple open-source application for the Openmoko platform
 which displays the night (and day!) sky. It is nowhere near as elaborate as, for
