--- a/GPS_Sight.mw
+++ b/GPS_Sight.mw
@@ -1,6 +1,9 @@
 [[Image:Gpv 0 0 screen shot.jpg|thumb|right|The summary tab]]
 [[Image:Image-Gpv 0 0 screen shot 2.jpg|thumb|right|The map tab (walking forward and back through the same street)]]
 [[Image:Gpssight train.jpg|thumb|right|Speed changes in the moving train (includes 3 intermediate stations and tunnel). This NMEA log is available in the project page]]
+
+{{Application|GPS Sight}}
+
 The GPS Sight is a GTK based project to create a usable GUI tool with the simple output (no maps). It detects GPRMC and GPGGA messages and constantly shows the following data on the screen:
 
 * Location.
