*Empty MediaWiki Message*

--- a/Navit.mw
+++ b/Navit.mw
@@ -1,3 +1,5 @@
+{{Application|Navit}}
+
 As described on the [http://navit.sourceforge.net/ Navit home page],
 
 "Navit is a car navigation system with routing engine.
