--- a/QMapControl.mw
+++ b/QMapControl.mw
@@ -1,3 +1,5 @@
+{{Application|QMapControl}}
+
 Displays maps from WMS servers or tile servers like OpenStreetMap. Custom data can be added: points, lines, images or even other widgets like buttons. All those can be bound to a specific coordinate.
 A parser is included, which reads data from gllin. QMapControl is still in development, hopefully some people join the development. 
 
