*Empty MediaWiki Message*

--- a/Samsung_S3C2442B.mw
+++ b/Samsung_S3C2442B.mw
@@ -31,22 +31,7 @@
 
 For information about the Evaluation board look [http://www.meritech.co.kr/products/product_view.php?num=52 here].
 
-[[User:HaraldWelte|Harald Welte]] wrote in [http://lists.openmoko.org/pipermail/neo1973-hardware/2007-September/000235.html  an e-mail] 
-to the neo1973-hardware mailing list:
-
- [...]
- apart from two differences, [the S3C2442B] is software/register-wise exactly
- identical to the s3c2440.  Hardware-wise it is packaged with 64MByte
- (x32) SDRAM and depending on the type, 128/256MByte NAND flash (2k page
- size).
- 
- The differences are:
- 
- 1) all pull-up resistors (GPBUP, ...) are now pull-down
- 2) the default initializers for the PLL have changed
- [...]
-
-The data sheet for the S3C2440A seems to be available at [http://www.tranzistoare.ro/datasheets/restul/259649_DS.pdf]. Samsung's page with more superficial information on the S3C2440 is at [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=S3C2440&&ppmi=PartnoSearch].
+For information about the difference between Samsung_S3C2440A and Samsung_S3C2442B, see [[Samsung_S3C2440A vs Samsung_S3C2442B]]
 
 
 == Neo FreeRunner ==
