*Empty MediaWiki Message*

--- a/Samsung_S3C2440A.mw
+++ b/Samsung_S3C2440A.mw
@@ -28,4 +28,4 @@
 | valign='top' | Freedom Requirements
 | 
 |}
-For information about the difference between Samsung_S3C2440A and Samsung_S3C2442B, see [[Samsung_S3C2440A vs Samsung_S3C2442B]]
+For information about the difference between [[Samsung S3C2440A]] and [[Samsung S3C2442B]], see [[Samsung_S3C2440A vs Samsung_S3C2442B]]
