*Empty MediaWiki Message*

--- a/Samsung_S3C2442B.mw
+++ b/Samsung_S3C2442B.mw
@@ -31,7 +31,8 @@
 
 For information about the Evaluation board look [http://www.meritech.co.kr/products/product_view.php?num=52 here].
 
-For information about the difference between Samsung_S3C2440A and Samsung_S3C2442B, see [[Samsung_S3C2440A vs Samsung_S3C2442B]]
+For information about the difference between [[Samsung S3C2440A]] and [[Samsung S3C2442B]], see [[Samsung_S3C2440A vs Samsung_S3C2442B]]
+
 
 
 == Neo FreeRunner ==
