--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -91,6 +91,8 @@ These end up in mixed content. They could be removed and content migrated to mor
 | [[Dfu-util/bg]] || Empty || [[User:Dolfje]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
 | [[OUI (Organizationally Unique Identifiers)]] || duplicate of [[OUI]] || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+| [[Openmoko/de]], [[Openmoko/es]], [[Openmoko/fr]], [[Openmoko/it]], [[Openmoko/ru]], [[Openmoko/zh tw]] || [[Openmoko]] has already been deleted by [[User:Sean|Sean]] || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 ==Wiki engine issues==
