--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3188,6 +3188,7 @@ Status: 1/10
 == Ukraine ==
 ==== Donetsk ====
 *[mailto:robotex.ag@mail.ru robotex] Robotex - 1xNeo Freerunner
+==== Kiev ====
 *[mailto:lvccgd@gmail.com lvccgd] Vladimir - 1xNeo Freerunner
 
 == USA ==
